Script para Criação da Tabela Tbl_cliente

--- a/ProjetoMVC3A/ProjetoMVC3A.csproj
+++ b/ProjetoMVC3A/ProjetoMVC3A.csproj
@@ -87,6 +87,8 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="DAL\tbl_cliente.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
