--- a/ProjetoMVC3A/ProjetoMVC3A.csproj
+++ b/ProjetoMVC3A/ProjetoMVC3A.csproj
@@ -49,7 +49,7 @@
   <ItemGroup>
     <Compile Include="BLL\BLL.cs" />
     <Compile Include="DAL\DALBD.cs" />
-    <Compile Include="DTO\DTO.cs" />
+    <Compile Include="DTO\tblClienteDTO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
