--- a/ProjetoMVC3A/ProjetoMVC3A.csproj
+++ b/ProjetoMVC3A/ProjetoMVC3A.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="BLL\tblClienteBLL.cs" />
     <Compile Include="BLL\tblFornecedorBLL.cs" />
+    <Compile Include="BLL\tblTipousuarioBLL.cs" />
     <Compile Include="DAL\DALBD.cs" />
     <Compile Include="DTO\tblClienteDTO.cs" />
     <Compile Include="DTO\tblFornecedorDTO.cs" />
