--- a/ProjetoMVC3A/ProjetoMVC3A.csproj
+++ b/ProjetoMVC3A/ProjetoMVC3A.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\tblCategoriaBLL.cs" />
     <Compile Include="BLL\tblClienteBLL.cs" />
     <Compile Include="BLL\tblFornecedorBLL.cs" />
     <Compile Include="BLL\tblProdutoBLL.cs" />
